<resources>
    <string name="app_name">滇池蓝藻水华预警监测信息平台</string>

    <!--登录-->
    <string name="login_username">用户名</string>
    <string name="login_password">密码</string>
    <string name="login_login">登录</string>
    <string name="login_organizer">主办单位：昆明市环境监测中心</string>
    <string name="login_technical_support">技术支持：北京航天泰坦科技股份有限公司</string>

    <!--主页-->
    <string name="main_home">首页</string>
    <string name="main_satellite">卫星遥感</string>
    <string name="main_ground">地基遥感</string>
    <string name="main_inspection">移动巡检</string>
    <string name="main_monitor">监测周报</string>

    <!--个人中心-->
    <string name="user_title">个人中心</string>
    <string name="user_unit">单位</string>
    <string name="user_department">部门</string>
    <string name="user_name">姓名</string>
    <string name="user_sex">性别</string>
    <string name="user_mobile">手机号码</string>
    <string name="user_email">电子邮箱</string>
    <string name="user_version">版本号</string>
    <string name="user_change">修改密码</string>
    <string name="user_check">切换账号</string>

    <!--修改密码-->
    <string name="change_title">修改密码</string>
    <string name="change_old">旧密码</string>
    <string name="change_new">新密码</string>
    <string name="change_check">确认密码</string>
    <string name="change_change">确认修改</string>

    <!--首页-->
    <string name="home_remote">遥感监测实况</string>
    <string name="home_satellite">卫星监测</string>
    <string name="home_ground">地基监测</string>
    <string name="home_buoy">浮标站实时数据</string>
    <string name="home_chlorophyll">叶绿素</string>
    <string name="home_chlorophyll_unit">μg/L</string>
    <string name="home_oxygen">溶解氧</string>
    <string name="home_oxygen_unit">mg/L</string>
    <string name="home_cyanobacteria">蓝藻</string>
    <string name="home_cyanobacteria_unit">cell/mL</string>
    <string name="home_temperature">水温</string>
    <string name="home_temperature_unit">℃</string>
    <string name="home_turbidity">浊度</string>
    <string name="home_turbidity_unit">NTU</string>
    <string name="home_humidity">湿度</string>
    <string name="home_humidity_unit">%</string>
    <string name="home_odds">未来水华发生概率</string>
    <string name="home_odds_percent">%</string>
    <string name="home_odds_first">明天</string>
    <string name="home_odds_second">后天</string>
    <string name="home_odds_third">第三天</string>
    <string name="home_patrol">巡查实时事件</string>

    <!--卫星遥感-->
    <string name="satellite_tool">工具</string>
    <string name="satellite_layer">图层</string>
    <string name="layers">图层控制</string>

    <!--地基遥感-->
    <string name="ground_tool">工具</string>
    <string name="ground_layer">图层</string>

    <!--移动巡检-->
    <string name="inspection_tool">工具</string>
    <string name="inspection_layer">图层控制</string>
    <string name="inspection_locus">轨迹查询</string>
    <string name="inspection_report">事件上报</string>
    <string name="inspection_inquire">事件查询</string>
    <string name="inspection_start">开始记录</string>
    <string name="inspection_suspend">暂停</string>
    <string name="inspection_end">结束</string>
    <string name="inspection_restart">继续</string>

    <!--工具-->
    <string name="tool_coordinate">拾取坐标</string>
    <string name="tool_navigation">在线导航</string>
    <string name="tool_attribute">属性查询</string>
    <string name="tool_distance">测量距离</string>
    <string name="tool_area">测量面积</string>
    <string name="tool_clean">清除标绘</string>

    <!--图层-->
    <string name="layer_title">图层</string>
    <string name="layer_base">基础图</string>
    <string name="layer_image">影像图</string>

    <!--导航-->
    <string name="navigation_title">导航</string>
    <string name="navigation_start">起点</string>
    <string name="navigation_end">终点</string>
    <string name="navigation_start_hint">输入起点</string>
    <string name="navigation_end_hint">输入终点</string>
    <string name="navigation_nav">开始导航</string>

    <!--监测周报-->
    <string name="monitor_title">周报列表</string>
    <string name="event_title">事件列表</string>
    <string name="event_detail_title">事件详细信息</string>
    <!--事件上报-->
    <string name="monitor_detail_title">事件上报</string>
    <string name="monitor_detail_name">事件名称</string>
    <string name="monitor_detail_description">事件描述</string>
    <string name="monitor_detail_longitude">经度</string>
    <string name="monitor_detail_latitude">纬度</string>
    <string name="monitor_detail_address">详细地址</string>
    <string name="monitor_detail_picture">现场图片</string>
    <string name="monitor_detail_audio">现场音频</string>
    <string name="monitor_detail_video">现场视频</string>
    <string name="monitor_detail_temporary">本地暂存</string>
    <string name="monitor_detail_report">立即上报</string>

    <!--权限判断-->
    <string name="help">帮助</string>
    <string name="string_help_text">当前应用缺少必要权限。请点击"设置"-"权限"-打开所需权限。最后点击两次后退按钮，即可返回。</string>
    <string name="quit">退出</string>
    <string name="settings">设置</string>

    <!--在线底图-->
    <string name="World_Imagery">http://services.arcgisonline.com/arcgis/rest/services/World_Imagery/MapServer</string>
    <string name="World_Street_Map">http://services.arcgisonline.com/arcgis/rest/services/World_Street_Map/MapServer</string>

    <!--水花影像-->
    <!--<string name="shui_imager">http://106.74.18.36:6080/arcgis/rest/services/DCLZ/WXJC_SH/MapServer</string>-->
    <!--内网卫星水华影像-->
    <string name="shui_imager">http://192.168.168.62:6080/arcgis/rest/services/DCLZ/WXJC_SH/MapServer</string>

    <!--内网地基影像-->
    <string name="diji_imager">http://192.168.168.62:6080/arcgis/rest/services/DCLZ/DJJC_SH/MapServer</string>
    <!--云服务-->
    <!--<string name="serverhost">http://101.201.54.143:5830/</string>-->
    <!--客户内网-->
    <string name="serverhost">http://192.168.168.62:8010/</string>

    <!--版本更新云服务地址-->
    <string name="updataurl">http://101.201.54.143:8031/apk/dclz/dclzversion.xml</string>
    <!--内网更新地址-->
    <!--<string name="updataurl"></string>-->


</resources>
