<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        android:background="@drawable/login_bg">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="50dp"
            android:adjustViewBounds="false"
            android:src="@drawable/login_logo"/>

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_logo"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textColor="#009944"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/app_name"/>

        <LinearLayout
            android:id="@+id/ll_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_name"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/login_normal"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:drawableLeft="@drawable/ic_user_selector"
                android:drawablePadding="10dp"
                android:background="@drawable/login_normal"
                android:textSize="18sp"
                android:textColor="@drawable/login_text_selector"
                android:hint="@string/login_username"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_username"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/login_normal"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:drawableLeft="@drawable/ic_pwd_selector"
                android:drawablePadding="10dp"
                android:background="@drawable/login_normal"
                android:textSize="18sp"
                android:textColor="@drawable/login_text_selector"
                android:inputType="textPassword"
                android:hint="@string/login_password"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_password"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:padding="8dp"
            android:gravity="center"
            android:background="@drawable/button_login"
            android:textSize="18sp"
            android:textColor="#fff"
            android:text="@string/login_login"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="36dp"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:text="@string/login_organizer"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="18dp"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:text="@string/login_technical_support"/>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>